[tool.poetry]
name = "users_api"
version = "0.1.0"
description = ""
authors = ["Kostya <serafi97@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
Flask-RESTful = "^0.3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
